# vit-curator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
scripts/: benchmark.py
src/vit_curator/: __init__.py  cli.py  config.py  langgraph_pipeline.py
src/vit_curator/ingest/: __init__.py  archive.py  fsops.py  pipeline.py  sorters.py  state.py  urls.py
src/vit_curator/label/: __init__.py  client.py  dispatcher.py  metrics.py  prompt.py  scheduler.py  schemas.py  store.py
src/vit_curator/post/: __init__.py  chunk.py  embed.py  enrich.py  knowledge_graph.py  layout_graph.py
src/vit_curator/preprocess/: __init__.py  bucket.py  decode.py  dedupe.py  derivatives.py  derivatives_db.py  derivatives_format.py  perceptual_dedupe.py  scan.py  transform.py  writer_queue.py
src/vit_curator/shared/: __init__.py  checkpoint.py  db.py  errors.py  hashing.py  progress.py  signals.py  state.py
src/vit_curator/train/: __init__.py  data.py  evaluate.py  export.py  models.py  predict.py  train.py
src/vit_curator/tui/: __init__.py  app.py  screens.py  themes.py  widgets.py
tests/: conftest.py  test_e2e_pipeline.py  test_ingest_archive.py  test_integration.py  test_label_dispatcher.py  test_label_metrics.py  test_label_prompt.py  test_label_scheduler.py  test_label_store.py  test_langgraph_pipeline.py  test_post_enrich.py  test_preprocess_backends.py  test_preprocess_dedupe.py  test_preprocess_perceptual_dedupe.py  test_preprocess_pipeline.py  test_preprocess_rescan.py  test_preprocess_scan.py  test_shared_db.py  test_shared_errors.py  test_shared_hashing.py  test_train_data.py  test_train_evaluate.py  test_train_imports.py
