[project]
name = "vit-curator"
version = "0.3.2"
description = "End-to-end ML curation pipeline: image ingest, preprocess, VLM label, train/predict, and RAG-style chunk/embed/enrich — single CLI, single DuckDB."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Jakob Charles"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["machine-learning", "computer-vision", "image-processing", "dataset-curation", "pipeline", "vlm", "duckdb", "fastai"]
dependencies = [
    "duckdb>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "xxhash>=3.4.1",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "orjson>=3.10.0",
    "pydantic>=2.7.0",
    "psutil>=7.2.1",
    "numpy>=1.26.0",
    "torch>=2.0.0",
    "torchvision>=0.16.0",
    "fastai>=2.7.0",
    "networkx>=3.2",
    "pytest-asyncio>=1.4.0",
]

[project.optional-dependencies]
dali = ["nvidia-dali-cuda120"]
vips = ["pyvips>=2.2.0"]
train = ["fastai>=2.7.0", "torch>=2.0.0", "torchvision>=0.16.0", "scikit-learn>=1.3.0", "onnx>=1.14.0", "ipython>=8.0.0"]
label = ["nvidia-ml-py>=12.0.0"]
tui = ["textual>=0.47.0"]
embed = ["sentence-transformers>=2.2.0"]
langgraph = ["langgraph>=0.2.0", "langgraph-checkpoint-sqlite>=2.0.0"]
dev = ["pytest>=8.0.0", "ruff>=0.6.0", "pyright>=1.1.380"]

[project.scripts]
vit-curator = "vit_curator.cli:app"
up = "vit_curator.cli:app"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vit_curator"]

[tool.hatch.build.targets.sdist]
include = [
    "src/vit_curator",
    "configs",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL", "RUF"]
ignore = ["PLR0913", "PLR2004", "PLR0912", "PLR0915", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLC0415"]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
reportMissingImports = "warning"
reportMissingTypeStubs = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "torch: tests requiring torch (deselect with '-m \"not torch\"')",
    "fastai: tests requiring fastai (deselect with '-m \"not fastai\"')",
    "dali: tests requiring nvidia-dali (deselect with '-m \"not dali\"')",
    "vips: tests requiring pyvips/libvips (deselect with '-m \"not vips\"')",
    "nvidia: tests requiring nvidia GPU (deselect with '-m \"not nvidia\"')",
    "slow: slow-running tests (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
